[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencl3 = "0.9.4"
regex = "1.10.2"
aoc_utils = { path = "libs/aoc_utils" }
anyhow = "1.0.75"
lazy_static = "1.4.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "tokio-macros", "full"] }
itertools = "0.12.0"
